--- a/index.html
+++ b/index.html
@@ -32,16 +32,37 @@
   <div class="popup-box">
     <span onclick="closePopup()" class="close">×</span>
     <h3>Free Interior Consultation</h3>
-    <form>
-      <input type="text" placeholder="Your Name" required>
-      <input type="tel" placeholder="Phone Number" required>
-      <select>
-        <option>Kitchen</option>
-        <option>Bedroom</option>
-        <option>Full Home</option>
-      </select>
-      <button type="submit">Submit</button>
-    </form>
+<form 
+  action="https://docs.google.com/forms/d/e/1FAIpQLSctgWBQ3Tt7OweByOmFJ3LGzN8irjxmFyGKLv-s_ooCPsr0zA/formResponse"
+  method="POST"
+  target="_blank"
+>
+
+  <input
+    type="text"
+    name="entry.300483973"
+    placeholder="Your Name"
+    required
+  >
+
+  <input
+    type="tel"
+    name="entry.1750376971"
+    placeholder="Phone Number"
+    required
+  >
+
+  <select name="entry.2070192358">
+    <option value="Kitchen">Kitchen</option>
+    <option value="Bedroom">Bedroom</option>
+    <option value="Living Room">Living Room</option>
+    <option value="Full Home">Full Home</option>
+    <option value="Office Interior">Office Interior</option>
+  </select>
+
+  <button type="submit">Submit</button>
+</form>
+
   </div>
 </div>
 
