--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
 <!-- FOOTER -->
 <footer>
-  <p>© 2025 Jayshankar Interior</p>
-  <p>📞 +91-XXXXXXXXXX</p>
+  © 2025 Jayshankar Interior<br>
+  📞 +91-9765261313
 </footer>
 
 <script src="script.js"></script>
